add: crud for products and providers