@@ -4,7 +4,6 @@ import ru.zhurkin.warehouseapp.model.generic.GenericModel;
 import ru.zhurkin.warehouseapp.support.dto.generic.GenericDTO;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class GenericMapper<E extends GenericModel, D extends GenericDTO> {
 
@@ -13,7 +12,7 @@ public abstract class GenericMapper<E extends GenericModel, D extends GenericDTO
     public List<E> toEntities(List<D> dtos) {
         return dtos.stream()
                 .map(this::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public abstract D toDto(E entity);
@@ -21,6 +20,6 @@ public abstract class GenericMapper<E extends GenericModel, D extends GenericDTO
     public List<D> toDtos(List<E> entities) {
         return entities.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
